@@ -1,3 +1,8 @@
+Mon Nov 18 18:15:56 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtksettings.c (gtk_settings_get_property): Clean up
+	a bit of duplicated code.
+
 Mon Nov 18 20:42:27 2002  Kristian Rietveld  <kris@gtk.org>
 
 	* gtk/gtktreeview.c (gtk_tree_view_expand_to_path): modify and
